# askbookie_api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
assets/: index.html
src/: database.py  main.py  rag.py
