[project]
name = "askbookie-api"
version = "0.1.0"
description = "API for AskBookie - a question answering system powered by LangChain and GenAI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "g4f>=6.8.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

